@@ -1,3 +1,12 @@
+2011-09-15  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* avr.c (avr_read, avr_write): Don't bail out on TPI parts if
+	their programmer doesn't provide a (low-level) cmd_tpi method;
+	instead, fall back to the normal programmer methods which are
+	supposed to handle the situation.
+	This fixes a regression where the recent bitbang-TPI implementation
+	broke TPI handling of STK600/AVRISPmkII.
+
 2011-09-13  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* stk500v2.c (stk500v2_command): Treat warnings as errors rather than
